--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.1"
   },
   "devDependencies": {
     "@types/react": "^16.4.1",
     "@types/react-native": "^0.55.23",
+    "@types/react-native-vector-icons": "^4.6.1",
     "@types/react-navigation": "^2.0.7",
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
